--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "productName": "optical-timer",
   "version": "1.0.0",
   "description": "Optical Timer desktop app",
+  "homepage": "https://neulhan.github.io/optical-timer/",
   "main": "src/index.js",
   "scripts": {
     "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\"",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "deploy": "gh-pages -d website",
     "lint": "echo \"No linting configured\"",
     "svelte-build": "rollup -c",
     "svelte-dev": "rollup -c -w",
@@ -46,6 +48,7 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "concurrently": "^5.1.0",
     "electron": "8.0.2",
+    "gh-pages": "^3.1.0",
     "rollup": "^1.32.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
