--- a/package.json
+++ b/package.json
@@ -26,7 +26,20 @@
       },
       "makers": [
         {
-          "name": "@electron-forge/maker-zip"
+          "name": "@electron-forge/maker-dmg",
+          "config": {
+            "background": "./src/assets/background/dmg-background.png",
+            "format": "ULFO",
+            "name": "optical-timer",
+            "icon": "./src/assets/icons/mac/icon.icns"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-wix",
+          "config": {
+            "language": 1033,
+            "manufacturer": "Neulhan"
+          }
         }
       ]
     }
@@ -39,6 +52,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
     "@electron-forge/maker-deb": "^6.0.0-beta.50",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.54",
     "@electron-forge/maker-pkg": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.50",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
